--- a/MMAGobal.Infrastructure/MMAGlobal.Infrastructure.csproj
+++ b/MMAGobal.Infrastructure/MMAGlobal.Infrastructure.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MMAGlobal.CommonUtilities\MMAGlobal.CommonUtilities.csproj" />
     <ProjectReference Include="..\MMAGlobal.Core\MMAGlobal.Core.csproj" />
   </ItemGroup>
 
